# LifePilot

./: .gitignore  Dockerfile  README.md  alembic.ini  alembic_auth.ini  alembic_report.ini  cmd command.txt  docker-compose.yml  requirements.txt
alembic/: env.py
alembic/versions/: 3dd5f926207a_init_schema.py
alembic_auth/: env.py
alembic_auth/versions/: 2f252318c54f_init_auth_schema.py  66a7ac232b15_add_username.py
alembic_report/: env.py
alembic_report/versions/: 298bc0698eef_init_reporting_schema.py
app/: main.py
app/api/: auth.py  (+3 more)
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_diary_tags.py  0003_admin_and_sport.py  0004_sport_rework.py  0005_muscle_groups.py  0006_investments.py
backend/app/: main.py
backend/app/core/: config.py  db.py  deps.py  security.py  uploads.py
backend/app/models/: __init__.py  user.py
backend/app/modules/admin/: models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: router.py  schemas.py
backend/app/modules/diary/: models.py  router.py  schemas.py  service.py
backend/app/modules/habits/: models.py  router.py  schemas.py
backend/app/modules/investments/: client.py  models.py  router.py  scheduler.py  schemas.py  service.py
backend/app/modules/reports/: router.py  schemas.py
backend/app/modules/sport/: models.py  router.py  schemas.py
docs/: ADMIN_GUIDE.md  ARCHITECTURE.md
frontend/: Dockerfile
infra/: .env.example  Caddyfile  docker-compose.yml
test/: test_okx_service.py
(+52 files in other folders)
